basic rendering (square highlighting), trying to get modules to work through ts

--- a/manifest.json
+++ b/manifest.json
@@ -11,14 +11,14 @@
     },
     "content_scripts": [
       {
-        "js": [
-          "src/index.js"
-        ],
         "css": [
             "static/style.css"
         ],
 
-        "matches": [
+        "js": [
+            "dist/app.min.js"
+        ],
+         "matches": [
           "https://www.chess.com/*"
         ]
       }
