added simple bundler script and can highlight a square with a color

--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
         ],
 
         "js": [
-            "dist/app.min.js"
+            "dist/bundle.js"
         ],
          "matches": [
           "https://www.chess.com/*"
